modifica file di configurazione per artserv profilo prc1 cambiata url price.service.url

--- a/artserv-prc1.properties
+++ b/artserv-prc1.properties
@@ -60,7 +60,7 @@ info.assistenza.email=flavio@maimail.com
 info.assistenza.telefono=3341234567clear
 info.tipoconf=github
 
-price.service.url=https://localhost:5071/prezzi/
+price.service.url=http://localhost:5071/prezzi/
 
 
 
