commento del rilascio

--- a/artserv-prc3.properties
+++ b/artserv-prc3.properties
@@ -67,7 +67,7 @@ feign.compression.response.enabled=true
 #Ribbon Properties
 ribbon.ReadTimeout=60000
 ribbon.ConnectTimeout=60000
-priceartserv.ribbon.listOfServers= http://localhost:5071,http://localhost:5072,http://localhost:5073
+#priceartserv.ribbon.listOfServers= http://localhost:5071,http://localhost:5072,http://localhost:5073
 #Opzioni Disponibili: RoundRobinRule AvailabilityFilteringRule BestAvailableRule WeightedResponseTimeRule
 #per le regole ribbon la default è RoundRobinRule che vale a dire sbilancia il carico facendo le chiamata una per macchina
 #posso cambiare tale regola come sotto mostrato il ping url è utilizzato per controllare i tempi di risposta e quindi è necessario per attivare la regola WeightedResponseTimeRule
