--- a/ZUUL-API-GATEWAY-prof5.yml
+++ b/ZUUL-API-GATEWAY-prof5.yml
@@ -47,6 +47,6 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://AdmUser:MagicaBula_2018@localhost:8761/eureka/
+      defaultZone: http://AdmUser:MagicaBula_2018@eureka:8761/eureka/
       #defaultZone: http://AdmUser:MagicaBula_2018@localhost:8762/eureka/,http://AdmUser:MagicaBula_2018@localhost:8761/eureka/,http://AdmUser:MagicaBula_2018@localhost:8763/eureka/
 
