--- a/PROMO-SERVICE-zona1.properties
+++ b/PROMO-SERVICE-zona1.properties
@@ -1,9 +1,9 @@
 # DataSource settings: set here your own configurations for the database 
 # connection. In this example we have "netgloo_blog" as database name and 
 # "root" as username and password.
-spring.datasource.url = jdbc:mysql://192.168.1.152:3306/Alphashop?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username =Flavio
-spring.datasource.password =Fcolt@elli@
+spring.datasource.url = jdbc:mysql://mysqldb/Alphashop?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username =developer
+spring.datasource.password =redhat
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
